Finished initial version of Gruntfile and manifest

--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,7 @@
 
   "background": {
     "scripts": [
-      "libs/require.js",
-      "main.js"
+      "libs.js"
     ],
     "persistent": false
   },
