--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {},
 	"devDependencies": {
 		"grunt": "~0.4.1",
+		"grunt-coffeelint": "~0.0.7",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-copy": "~0.4.1",
 		"grunt-contrib-coffee": "~0.7.0"
