--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"grunt-coffeelint": "~0.0.7",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-copy": "~0.4.1",
-		"grunt-contrib-coffee": "~0.7.0"
+		"grunt-contrib-coffee": "~0.7.0",
+		"grunt-contrib-requirejs": "~0.4.1",
+		"grunt-contrib-uglify": "~0.2.2"
 	}
 }
