--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"grunt": "~0.4.1",
 		"grunt-coffeelint": "~0.0.7",
 		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-copy": "~0.4.1",
 		"grunt-contrib-coffee": "~0.7.0",
 		"grunt-contrib-requirejs": "~0.4.1",
-		"grunt-contrib-uglify": "~0.2.2"
+		"grunt-contrib-uglify": "~0.2.2",
+		"grunt-replace": "~0.4.4"
 	}
 }
